@@ -19,8 +19,8 @@ cdef class HilbertArray:
     cpdef relabel(self, from_spaces, to_spaces=*)
     cpdef relabel_prime(self)
     cpdef apply_map(self, fn)
-    cpdef closeto(self, other, rtol=*, atol=*)
-    cpdef lmul(self, other)
+    cpdef closeto(self, HilbertArray other, rtol=*, atol=*)
+    cpdef lmul(self, HilbertArray other)
     cpdef _index_key_to_map(self, key)
     cpdef _get_set_item(self, key, do_set=*, set_val=*)
     cpdef _space_string(self, spc_set)
@@ -47,6 +47,7 @@ cdef class HilbertArray:
     cpdef sqrt(self)
     cpdef entropy(self, normalize=*, checks=*)
     cpdef purity(self, normalize=*, checks=*)
+    cpdef fidelity(self, HilbertArray other)
     cpdef QR(self, inner_space=*)
     cpdef tuple measure(self, HilbertSpace spc=*, cpython.bool normalize=*)
     cpdef span(self, axes=*)
