@@ -39,6 +39,7 @@ cdef class HilbertSpace(object):
     cpdef HilbertArray random_unitary(self)
     cpdef HilbertArray random_isometry(self)
     cpdef HilbertArray random_density(self)
+    cpdef HilbertArray random_povm_element(self)
     cpdef HilbertArray eye(self)
     cpdef HilbertArray fully_mixed(self)
     cpdef basis_vec(self, idx)
