@@ -1,5 +1,6 @@
 === qitensor-0.12dev (Dan Stahlke, ongoing) ===
-	* No changes yet.
+	* HilbertArray.fidelity
+	* HilbertSpace.random_povm_element
 
 === qitensor-0.11 (Dan Stahlke, 2013-05-11) ===
 	* superoperators module
